Alteração no nome da coluna "Value".

--- a/DDDApplication/DDDApplication.MVC/Views/Products/Details.cshtml
+++ b/DDDApplication/DDDApplication.MVC/Views/Products/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Valeu)
+            @Html.DisplayNameFor(model => model.Value)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Valeu)
+            @Html.DisplayFor(model => model.Value)
         </dd>
 
         <dt>
