--- a/DDDApplication/DDDApplication.MVC/Views/Products/Create.cshtml
+++ b/DDDApplication/DDDApplication.MVC/Views/Products/Create.cshtml
@@ -24,10 +24,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Valeu, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Value, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Valeu, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Valeu, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Value, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Value, "", new { @class = "text-danger" })
             </div>
         </div>
 
