--- a/DDDApplication/DDDApplication.MVC/Views/Products/Delete.cshtml
+++ b/DDDApplication/DDDApplication.MVC/Views/Products/Delete.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Valeu)
+            @Html.DisplayNameFor(model => model.Value)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Valeu)
+            @Html.DisplayFor(model => model.Value)
         </dd>
 
         <dt>
