--- a/DDDApplication/DDDApplication.MVC/Views/Products/Index.cshtml
+++ b/DDDApplication/DDDApplication.MVC/Views/Products/Index.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Valeu)
+            @Html.DisplayNameFor(model => model.Value)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Available)
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Valeu)
+            @Html.DisplayFor(modelItem => item.Value)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Available)
