--- a/DDDApplication/DDDApplication.MVC/Views/Products/Create.cshtml
+++ b/DDDApplication/DDDApplication.MVC/Views/Products/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ProductViewModel</h4>
         <hr />
@@ -63,4 +63,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/validationsptbr")
 }
